add_subdirectory(aclock)
add_subdirectory(application)
add_subdirectory(connect)
add_subdirectory(cursor)
add_subdirectory(dclock)
add_subdirectory(dirview)
add_subdirectory(dragdrop)
add_subdirectory(drawdemo)
add_subdirectory(forever)
add_subdirectory(hello)
add_subdirectory(layout)
add_subdirectory(life)
add_subdirectory(menu)
add_subdirectory(movies)
add_subdirectory(picture)
add_subdirectory(pref)
add_subdirectory(progress)
add_subdirectory(qdir)
add_subdirectory(qmag)
add_subdirectory(qwerty)
add_subdirectory(scrollview)
add_subdirectory(showimg)
add_subdirectory(splitter)
add_subdirectory(table)
add_subdirectory(tetrix)
add_subdirectory(tictac)
add_subdirectory(timestmp)
add_subdirectory(tooltip)
add_subdirectory(validator)
add_subdirectory(widgets)
add_subdirectory(xform)
