#=============================================================================
# Copyright 2018       Helio Chissini de Castro <helio@kde.org>
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
#
# 1. Redistributions of source code must retain the copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
# 3. The name of the author may not be used to endorse or promote products
#    derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
# IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
# NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
# THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

add_subdirectory(aclock)
add_subdirectory(application)
add_subdirectory(connect)
add_subdirectory(cursor)
add_subdirectory(dclock)
add_subdirectory(dirview)
add_subdirectory(dragdrop)
add_subdirectory(drawdemo)
add_subdirectory(forever)
add_subdirectory(hello)
add_subdirectory(layout)
add_subdirectory(life)
add_subdirectory(menu)
add_subdirectory(movies)
add_subdirectory(picture)
add_subdirectory(pref)
add_subdirectory(progress)
add_subdirectory(qdir)
add_subdirectory(qmag)
add_subdirectory(qwerty)
add_subdirectory(scrollview)
add_subdirectory(showimg)
add_subdirectory(splitter)
add_subdirectory(table)
add_subdirectory(tetrix)
add_subdirectory(tictac)
add_subdirectory(timestmp)
add_subdirectory(tooltip)
add_subdirectory(validator)
add_subdirectory(widgets)
add_subdirectory(xform)
